--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,24 @@
 .App {
   text-align: center;
 }
+.sizer{
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  height: 40rem;
+  width: 100%;
+  /* border: 2px solid red; */
+}
+.white {
+  background-color: white;
+}
+.red {
+  background-color: #761E35;
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@media(max-width: 700px){
+  .red{
+    height:100%;
 }
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
