--- a/src/views/Home/home.css
+++ b/src/views/Home/home.css
@@ -1,11 +1,20 @@
-.sizer {
+/* .sizer {
     height: 40rem;
     width: 100%;
-}
-.red {
-    background-color: red;
-}
-.white {
-    background-color: white;
+} */
+
+.logoHeaderDiv{
+    width: 100%;
+    height: 7rem;
+    border: 2px solid red;
 }
 
+.homeHeroDiv{
+    background-image: url('../../images/bitmap.png');
+    background-size: cover;
+}
+@media(max-width: 900px){
+    .homeItineraryDiv{
+        height: 137rem;   
+    }
+}
