--- a/src/App.css
+++ b/src/App.css
@@ -11,13 +11,14 @@
   background-color: white;
 }
 .red {
+  /* height: 40rem; */
   background-color: #761E35;
   
 }
 
 @media(max-width: 700px){
   .red{
-    height:100%;
+    /* height:100%; */
 }
 }
 
