--- a/src/App.css
+++ b/src/App.css
@@ -13,12 +13,13 @@
 .red {
   /* height: 40rem; */
   background-color: #761E35;
+  color: white;
   
 }
 
 @media(max-width: 700px){
   .red{
-    /* height:100%; */
+    height:100%;
 }
 }
 
