--- a/src/ComptsWIthState/RsvpForm/rsvpForm.css
+++ b/src/ComptsWIthState/RsvpForm/rsvpForm.css
@@ -4,13 +4,37 @@
     border: 2px solid red;
 }
 .rsvpParentDiv{
+    /* border: 2px solid blue; */
     width: 40%;
     height: inherit;
-    border: 2px solid blue;
     margin: 0 auto;
 }
 .rsvpTitle{
     text-align: center;
+}
+.guestArrayUl{
+    /* border: 2px solid blue; */
+    margin: 0 auto;
+    width: 85%;
+    
+}
+.guestLi{
+    /* border: 2px solid red; */
+    display: inline;
+    padding-left: 0.5rem;
+    /* padding-right: 0.5rem; */
+    background-color: #AD7886;
+    margin-left: 3px;
+    margin-right: 3px;
+}
+.xDiv{
+    /* border: 2px solid black; */
+    display: inline-block;
+    cursor: pointer;
+    width: 1.5rem;
+    border-radius: 50%;
+    margin-left: 12px;
+    background-color: white;
 }
 @media(max-width: 900px){
     .rsvpParentDiv{
