--- a/src/views/Itinerary/itinerary.css
+++ b/src/views/Itinerary/itinerary.css
@@ -86,7 +86,7 @@ margin: 0.5rem auto;
         padding: 1rem;  
     }
     .learnMoreButton{
-        margin-top: 2rem;
+        /* margin-top: 1rem; */
     }
 }
 
