--- a/src/views/WhereToStay/whereToStay.css
+++ b/src/views/WhereToStay/whereToStay.css
@@ -25,9 +25,9 @@
 }
 
 @media(max-width: 800px){
-    .sizer{
+    /* .sizer{
         height: 50rem;
-    }
+    } */
 .name{
     border-top: 2px solid black;
     border-bottom: 2px solid black;
