--- a/src/views/BridalParty/bridalParty.css
+++ b/src/views/BridalParty/bridalParty.css
@@ -16,7 +16,7 @@
     position: relative;
     top: -26rem;
     left: 50%;
-    border: 2px solid orange;
+    border: 2px solid purple;
     width: 32rem;
     height: 25rem;
 }
