--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,30 @@
   color: white;
   
 }
+.logoHeaderDiv{
+  width: 100%;
+  height: 7rem;
+  /* border: 2px solid red; */
+}
 
+.links {
+  /* border: 2px solid red; */
+  position: relative;
+  right: 3rem;
+  top: 2.5rem;
+}
+.linkButton {
+  display: inline;
+  color:#761E35;
+  margin: 0.5rem;
+}
+a {
+  text-decoration: none;
+}
+.foot{
+  padding: 1rem;
+  background-color: white;
+}
 @media(max-width: 700px){
   .red{
     height:100%;
