--- a/src/ComptsWIthState/Admin/admin.css
+++ b/src/ComptsWIthState/Admin/admin.css
@@ -13,6 +13,11 @@
     background-color: #FFFFBE;
     border-radius: 5px;
 }
+.guestNumbers{
+    border: 2px solid red;
+    padding-right: 1rem;
+    float: right;
+}
 
 .primaryGuestGreen{
     padding: 1rem;
