--- a/src/ComptsWIthState/RsvpForm/rsvpForm.css
+++ b/src/ComptsWIthState/RsvpForm/rsvpForm.css
@@ -1,47 +1,101 @@
 .rsvpComponentDiv{
+    padding-top: 3rem;
     width: 100%;
     height: 30rem;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 .rsvpParentDiv{
-    /* border: 2px solid blue; */
-    width: 40%;
+    border: 2px solid blue;
+    position: relative;
+    top: -3rem;
+    width: 50%;
     height: inherit;
     margin: 0 auto;
 }
 .rsvpTitle{
-    text-align: center;
+    text-align: left;
+    font-family: 'Great Vibes', cursive;
+    color: #761e35;
+    padding: 0;
+    margin: 0;
+}
+.rsvpVerbage{
+    position: relative;
+    top: -1rem;
+    padding-top: 0; 
+}
+.nameH3{
+    position: relative;
+    top: -2rem;
+    font-weight: bold;
+    color: #761e35;
+    /* padding-top: rem; */
+}
+.nameLabelDesc{
+    position: relative;
+    top: -2rem;
+}
+.nameForm{
+    position: relative;
+    top: -1.5rem;
+}
+.attendingH3{
+    font-weight: bold;
+    color: #761e35;
+    padding-top: 0.5rem;
+}
+.label {
+    /* border: 2px solid red; */
+    margin: 0;
+}
+.nameInput{
+    width: 20rem;
 }
 .guestArrayUl{
     /* border: 2px solid blue; */
+    padding-top: 1rem;
     margin: 0 auto;
     width: 85%;
     
 }
 .guestLi{
-    /* border: 2px solid red; */
+    border: 0.5px solid black;
     display: inline;
-    padding-left: 0.5rem;
+    padding: 0.5rem;
+    border-radius: 3px;
     /* padding-right: 0.5rem; */
     background-color: #AD7886;
     margin-left: 3px;
     margin-right: 3px;
+    color: white;
+    font-size: 12px;
 }
 .xDiv{
-    /* border: 2px solid black; */
+    /* border: 2px solid white; */
     display: inline-block;
     cursor: pointer;
-    width: 1.5rem;
+    /* font-size: 1rem; */
+    /* width: 1.5rem; */
+    height: 21px;
+    width: 17px;
     border-radius: 50%;
-    margin-left: 12px;
-    background-color: white;
+    /* padding-right: 12px; */
+    /* padding-left: 4px; */
+    position: relative;
+    /* top: 2px; */
+    /* left: 5%; */
+    background-color: #AD7886;
+    color: white;
+}
+.xDiv i{
+    color: white;
 }
 @media(max-width: 900px){
     .rsvpParentDiv{
-        border: 2px solid blue;
-        width: inherit;
+        /* border: 2px solid blue; */
+        width: 80%;
         height: inherit;
-        text-align: center;
+        text-align: left;
         margin: 0 auto;
     }
 }
