--- a/src/views/BridalParty/bridalParty.css
+++ b/src/views/BridalParty/bridalParty.css
@@ -3,7 +3,7 @@
     background-size: cover;
 }
 .bridalPartyInnerPlacementDiv{
-    border: 2px solid green;
+    /* border: 2px solid green; */
     width: 75%;
     height: 27rem;
     position: relative;
@@ -16,13 +16,44 @@
     position: relative;
     top: -26rem;
     left: 50%;
-    border: 2px solid purple;
+    /* border: 2px solid purple; */
     width: 32rem;
     height: 25rem;
 }
 
 .imgDiv{
-    background-color: red;
+    background-color: lightgrey;
     height: 27rem;
     width: 45%;
+}
+@media(max-width: 900px){
+.sizer{
+    height: 30rem;
+}
+    .bridalPartyInnerPlacementDiv{
+        /* border: 2px solid green; */
+        width: 100%;
+        height: 27rem;
+        position: relative;
+        top: 1rem;
+        /* margin: 1rem; */
+        left: 0;
+        /* margin-top: 15rem; */
+    }
+    .description{
+        position: relative;
+        top: 1px;
+        left: 0%;
+        /* border: 2px solid purple; */
+        margin: 0 auto;
+        width: 25rem;
+        height: 12rem;
+        font-size: 12px;
+    }
+    
+    .imgDiv{
+        margin: 0 auto;
+        height: 15rem;
+        width: 90%;
+    }
 }
