--- a/src/views/BridalParty/bridalParty.css
+++ b/src/views/BridalParty/bridalParty.css
@@ -7,27 +7,42 @@
     width: 75%;
     height: 27rem;
     position: relative;
-    top: 6rem;
+    top: 2rem;
     left: 13%;
-    /* margin-top: 15rem; */
-}
+     /* margin-top: 15rem; */
+} 
 
 .description{
     position: relative;
-    top: -26rem;
+    top: -20rem;
     left: 50%;
     /* border: 2px solid purple; */
     width: 32rem;
     height: 25rem;
 }
+.titleH2{
+    /* border: 2px solid red; */
 
+    position: absolute;
+    top: 1rem;
+    width: 100%;
+    text-align: center;
+}
 .imgDiv{
     background-color: lightgrey;
-    height: 27rem;
+    height: 23rem;
     width: 45%;
 }
 @media(max-width: 900px){
-.sizer{
+    .titleH2{
+        /* border: 2px solid red; */
+    
+        position: absolute;
+        top: 3rem;
+        width: 100%;
+        text-align: center;
+    }
+.sizerWhite{
     height: 30rem;
 }
     .bridalPartyInnerPlacementDiv{
@@ -42,13 +57,17 @@
     }
     .description{
         position: relative;
-        top: 1px;
+        top: -32px;
         left: 0%;
         /* border: 2px solid purple; */
         margin: 0 auto;
-        width: 25rem;
-        height: 12rem;
+        width: 20rem;
+        height: 15rem;
         font-size: 12px;
+    }
+    .description h2 {
+        position: relative;
+        top: 1rem;
     }
     
     .imgDiv{
