--- a/src/views/Home/home.css
+++ b/src/views/Home/home.css
@@ -13,6 +13,7 @@
 }
 
 .registerTripDiv{
+    /* border: 2px solid red; */
     height: 100%;
     padding-bottom: 3rem;
     position: relative;
@@ -20,14 +21,15 @@
 }
 
 .giftingRegister{
+    /* border: 2px solid blue; */
     width: 55%;
     margin: 0 auto;
-    padding-top: 3rem;
+    padding-top: 2rem;
     text-align: center;
     color: white;
 }
 .giftRegistryDesc{
-    border: 2px solid red;
+    /* border: 2px solid red; */
     margin: 0 auto;
     padding-bottom: 2rem;
     line-height: 2;
@@ -211,7 +213,7 @@
     .nameDiv{
         /* border: 2px solid green; */
         display: block;
-        width: 18rem;
+        width: 12rem;
         position: relative;
         left: 30%;
         top: -7rem;
