--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 .white {
   background-color: white;
-  border: 2px solid purple;
+  /* border: 2px solid purple; */
 }
 .red {
   /* height: 40rem; */
@@ -14,6 +14,7 @@
   color: white;
   
 }
+
 .logoHeaderDiv{
   width: 100%;
   height: 7rem;
@@ -23,6 +24,7 @@
 .links {
   /* border: 2px solid red; */
   position: relative;
+  font-weight: bold;
   right: 3rem;
   top: 2.5rem;
 }
@@ -39,6 +41,22 @@ a {
   background-color: white;
   text-align: center;
 }
+.logoPic{
+  /* border: 2px solid red; */
+  height: 6rem; 
+  width: 20rem;
+  margin-top: 0.75rem;
+  position: absolute;
+  /* /* z-index: 3; */
+}
+.cropLogo{
+  margin-top: 1rem;
+  /* left: 1rem; */
+  display: none;
+  position: absolute;
+  height: 5rem;
+}
+
 @media(max-width: 700px){
   .links {
     /* border: 2px solid red; */
@@ -46,10 +64,25 @@ a {
     right: 0rem;
     top: 2.5rem;
   }
-  .red{
-    height:100%;
+  .sizer{
+    height: 30rem;
+  }
+  .red {
+    height: 100%;
+  }
+  .logoPic{
+    /* border: 2px solid red; */
+    /* top:1rem;
+    height: 3rem; 
+    width: 10rem; */
+    display:none;
+    /* z-index: 3; */
+  }
+  .cropLogo{
+    display: block;
+  }
 }
-}
+
 
 @keyframes App-logo-spin {
   from {
@@ -58,4 +91,5 @@ a {
   to {
     transform: rotate(360deg);
   }
+ 
 }
