--- a/src/ComptsWIthState/Admin/admin.css
+++ b/src/ComptsWIthState/Admin/admin.css
@@ -14,7 +14,7 @@
     border-radius: 5px;
 }
 .guestNumbers{
-    border: 2px solid red;
+    /* border: 2px solid red; */
     padding-right: 1rem;
     float: right;
 }
@@ -61,9 +61,28 @@
     opacity: 1;
     
 }
-
+adminH1{
+    padding-bottom: 2rem;
+}
 .guestDiv{
     width: 30rem;
     padding-bottom: 1rem;
     margin-left: 0.5rem;
+}
+
+@media(max-width: 1000px){
+    .guestNumbers{
+        width: 25rem;
+        position: relative;
+        top: -3rem;
+        left: 0rem;
+        float: left;
+        font-size: 14px;
+    }
+    .peg{
+        display: inline;
+    }
+    .secondaryGuest{
+        left: 0%;
+    }
 }
