--- a/src/views/BridalParty/bridalParty.css
+++ b/src/views/BridalParty/bridalParty.css
@@ -11,6 +11,9 @@
     left: 13%;
      /* margin-top: 15rem; */
 } 
+.sizerForBridal{
+    height: 27rem;
+}
 
 .description{
     position: relative;
@@ -20,13 +23,20 @@
     width: 32rem;
     height: 25rem;
 }
+.sectionTitle{
+    padding: 0.5rem;
+    font-family: 'Great Vibes', cursive;
+    letter-spacing: 3px;
+}
 .titleH2{
     /* border: 2px solid red; */
-
+    font-family: 'Great Vibes', cursive;
     position: absolute;
     top: 1rem;
     width: 100%;
+    z-index: -32;
     text-align: center;
+    letter-spacing: 3px;
 }
 .imgDiv{
     background-color: lightgrey;
@@ -38,10 +48,13 @@
         /* border: 2px solid red; */
     
         position: absolute;
-        top: 3rem;
+        top: 4rem;
         width: 100%;
         text-align: center;
     }
+.sizerRed{
+    height: 30rem;
+}
 .sizerWhite{
     height: 30rem;
 }
@@ -57,7 +70,7 @@
     }
     .description{
         position: relative;
-        top: -32px;
+        top: 1px;
         left: 0%;
         /* border: 2px solid purple; */
         margin: 0 auto;
@@ -74,5 +87,11 @@
         margin: 0 auto;
         height: 15rem;
         width: 90%;
+    }
+    .bridalPartyInner{
+        /* border: 2px solid red; */
+    }
+    .redSizerForBridal{
+        height: 30rem;
     }
 }
