--- a/src/views/Home/home.css
+++ b/src/views/Home/home.css
@@ -11,7 +11,9 @@
 .pin {
 
 }
-
+.homeInviteFormDiv{
+    height: 43rem;
+}
 .registerTripDiv{
     /* border: 2px solid red; */
     height: 100%;
@@ -87,12 +89,14 @@
 }
 .centeredBridalPartydiv{
     /* border: 2px solid green; */
-    width: 70%;
+    width: 80%;
     margin: 0 auto;
 }
 .bridalPartySectionTitle{
     width: 100%;
     text-align: center;
+    font-size: 18px;
+    font-family: 'Great Vibes', cursive;
 }
 .immediateBridalPartyParent{
     /* border: 2px solid purple;    */
@@ -106,6 +110,7 @@
 .bridalPartyMemberCircle{
     border: 1px solid darkgray;
     background-color: gray;
+    margin: 1rem;
     border-radius: 50%;
     display: block;
     width: 10rem;
@@ -143,7 +148,7 @@
     /* font-family: Avenir; */
     font-size: 14px;
     position: relative;
-    top: 17rem;
+    top: 15rem;
     text-align: center;
     color: white;
 }
@@ -152,7 +157,7 @@
 }
 .weddingInfoDiv{
     position: relative;
-    top: 27rem;
+    top: 24rem;
     height: 10rem;
     margin: 0 auto;
     width: 60%;
@@ -167,11 +172,25 @@
         position: relative;
         left: 30%;
     }
+    .weddingInfoParent .content{
+        /* font-family: Avenir; */
+        font-size: 14px;
+        position: relative;
+        top: 8rem;
+    }
+   
+    .weddingInfoDiv{
+        position: relative;
+        top: 17rem;
+      
+    }
 }
 /*  cant  figure out css issues */
 /* //////////////////////////////////////////////////// */
 @media(max-width: 1500px){
 .bridalPartyMemberCircle{
+    margin: 0rem;
+    margin-left: 1rem;
     height: 7rem;
     width: 7rem;
 }
@@ -182,6 +201,9 @@
 }
 
 @media(max-width: 900px){
+    .homeInviteFormDiv{
+        height: 47rem;
+    }
     
     .registerTripDiv{
         padding-bottom: 3rem;
@@ -216,7 +238,7 @@
         width: 12rem;
         position: relative;
         left: 30%;
-        top: -7rem;
+        top: -6rem;
         /* margin: ; */
     }
     
