--- a/src/views/WhereToStay/whereToStay.css
+++ b/src/views/WhereToStay/whereToStay.css
@@ -2,6 +2,10 @@
     background-image: url('../../images/img5.jpg');
     background-size: cover;
 }
+.WhereToStayH2{
+    position: absolute;
+    top: 1rem;
+}
 .locationDetails{
     /* border: 5px solid green; */
     width: 75%;
@@ -10,6 +14,7 @@
     top: 6rem;
     left: 13%;
 }
+
 .locationImgDiv{
     background-color: grey;
     height: 27rem;
@@ -21,16 +26,17 @@
     top: -26rem;
     left: 50%;
     width: 32rem;
-    height: 25rem;
+    /* height: 25rem; */
 }
 
 @media(max-width: 800px){
     /* .sizer{
         height: 50rem;
     } */
+   
 .name{
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
+    /* border-top: 2px solid black; */
+    /* border-bottom: 2px solid black; */
     text-align: center;
     position: relative;
     top: -30.5rem;
@@ -45,9 +51,8 @@
 }
  .locationDetails{
     /* border: 2px solid black; */
-    margin-top: 3rem;
      width: 100%;
-     height: 37rem;
+     height: 39rem;
      top: 0;    
      left: 0;
  }   
@@ -56,20 +61,22 @@
     width: 100%
  }
  .locationDescriptionParent{
-    /* border: 2px solid black; */
+    border: 2px solid black;
      width: 100%;
-     top: 0;
+     top: 3rem;
      left: 0;
  }
  .locationDescription{
     /* border: 2px solid black; */
+    margin: 0 auto;
+    width: 73%;
      position: relative;
-     top: -3rem;
+     /* top: -2rem; */
  }
  
  .red .name{
-     border-top: 2px solid black;
-     border-bottom: 2px solid black;
+     /* border-top: 2px solid black; */
+     /* border-bottom: 2px solid black; */
      color: #761E35;
      text-align: center;
      position: relative;
