--- a/src/views/BridalParty/bridalParty.css
+++ b/src/views/BridalParty/bridalParty.css
@@ -24,7 +24,7 @@
     height: 25rem;
 }
 .sectionTitle{
-    padding: 0.5rem;
+    /* padding: 0.5rem; */
     font-family: 'Great Vibes', cursive;
     letter-spacing: 3px;
 }
@@ -69,10 +69,10 @@
         /* margin-top: 15rem; */
     }
     .description{
-        position: relative;
-        top: 1px;
-        left: 0%;
         /* border: 2px solid purple; */
+        position: relative;
+        top: 0rem;
+        left: 0%;
         margin: 0 auto;
         width: 20rem;
         height: 15rem;
@@ -80,7 +80,7 @@
     }
     .description h2 {
         position: relative;
-        top: 1rem;
+        top: 0.5rem;
     }
     
     .imgDiv{
